# memes2telegram

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  converter.py  dockerfile  main.py  pyproject.toml  randomizer.py  requirements.txt  scraper.py  test_scraper.py  utils.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  lint-and-test.yml  pylint.yml  pysa.yml  python-app.yml  tests.yml
tests/: test_converter.py  test_main.py  test_randomizer.py  test_scraper.py
