[tool.poetry]
name = "memes2telegram"
version = "0.1.1"
description = "Simple Telegram chat bot that downloads GIF, WEBM, and MP4 by URL and sends them back as properly encoded Telegram MP4 videos."
authors = ["ChaikaBogdan"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.3"
cachetools = "^5.3.3"
python = "^3.11"
python-dotenv = "^1.0.1"
python-telegram-bot = {extras = ["job-queue"], version = "^21.3"}
validators = "^0.33.0"
pillow = "^10.4.0"
pytest-xdist = "^3.6.1"
instaloader = "^4.11"
dev-moviepy = "^2.0.0.dev0"
httpx = "^0.27.0"

[tool.poetry.extras]
python-telegram-bot = ["job-queue"]

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.1"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.5.3"
pytest-httpx = "^0.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
