[tool.poetry]
name = "memes2telegram"
version = "1.0.0"
description = "Simple Telegram chat bot that downloads GIF, WEBM, and MP4 by URL and sends them back as properly encoded Telegram MP4 videos."
authors = ["Bogdan Bashev"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.3"
cachetools = "^5.5.0"
python = "^3.11"
python-dotenv = "^1.0.1"
python-telegram-bot = {extras = ["job-queue"], version = "^21.7"}
validators = "^0.34.0"
pillow = "^10.4.0"

httpx = "^0.27.2"
yt-dlp = {extras = ["default"], version = "^2024.11.18"}
instaloader = "^4.14"
async-cache = "^1.1.1"

[tool.poetry.extras]
python-telegram-bot = ["job-queue"]

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "<=5.0.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.8.1"
pytest-httpx = "^0.33.0"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
